fix on mobile

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -61,6 +61,12 @@ a {
             margin-left: 20px;
             @include input;
         }
+
+        .passwordinput {
+            width: 20%;
+            margin-left: 20px;
+            @include input;
+        }
     
         .add {
             margin-left: 20px;
@@ -136,8 +142,28 @@ a {
         margin: 5% 10%;
 
         .new {
+            display: block;
+            justify-content: center;
+
             .idinput {
-                width: 20%;
+                width: 100%;
+                margin: 20px 0px 0px 0px;
+            }
+
+            .folderinput {
+                width: 100%;
+                margin: 20px 0px 0px 0px;
+            }
+            
+            .passwordinput {
+                width: 100%;
+                margin: 20px 0px 20px 0px;
+            }
+
+            .add {
+                padding: 10px calc(50% - 16px);
+                margin: 30px 0;
+                
             }
         }
     }
@@ -146,15 +172,5 @@ a {
 @media only screen and (max-width: 600px) {
     .container {
         margin: 5%;
-
-        .new {
-            .linkinput {
-                width: 20%;
-            }
-
-            .idinput {
-                width: 20%;
-            }
-        }
     }
 }
